extensions/bt-system-bundle/src/endpoints/excel-importer/services/__tests__/fixtures/invalid-files/fake-text.xlsx
This is not an Excel workbook. It is plain text with an xlsx suffix.
